// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcCurrencyInput :props should render a loading state when currenciesLoading is set true 1`] = `
<ecpopover-stub
  class="ec-dropdown-search__trigger"
  data-test="ec-popover-dropdown-search"
  offset="8"
  placement="bottom-end"
  popoverinnerclass="ec-dropdown-search__popover"
  popperoptions="[object Object]"
>
  <div
    class="ec-input-field"
    data-test="ec-input-field"
  >
    <!---->
     
    <input
      class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
      data-test="ec-currency-input__currencies ec-dropdown__input ec-input-field__input"
      id="ec-currency-input-field-61"
      placeholder=""
      readonly="readonly"
      type="text"
    />
     
    <div
      class="ec-input-field__icon-wrapper"
    >
      <svg
        class="ec-input-field__icon ec-icon"
        data-test="ec-input-field__icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
    </div>
     
    <!---->
  </div>
   
  <div>
    <ul
      class="ec-dropdown-search__item-list"
    >
      <li
        class="ec-dropdown-search__search-area"
      >
        <svg
          class="ec-dropdown-search__search-icon ec-icon"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
         
        <input
          autocomplete="off"
          class="ec-dropdown-search__search-input"
          data-test="ec-dropdown-search__search-input"
          placeholder="Search..."
        />
      </li>
       
      <!---->
       
      <li>
        <div
          class="ec-loading"
        >
          <div
            class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
          >
            <svg
              class="ec-loading__icon ec-icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-loading"
              />
            </svg>
          </div>
           
          <div
            class="ec-loading__content ec-loading__content--is-transparent"
          >
            <div
              class="ec-dropdown-search__loading"
              data-test="ec-dropdown-search__loading"
            />
          </div>
        </div>
      </li>
    </ul>
  </div>
</ecpopover-stub>
`;

exports[`EcCurrencyInput :props should render the component with the dropdown part disabled when isCurrenciesDisabled is set true 1`] = `
<div
  class="ec-currency-input__currencies ec-currency-input__currencies--is-disabled"
  data-test="ec-currency-input__currencies"
>
  EUR
</div>
`;

exports[`EcCurrencyInput :props should render the component with the input disabled when isAmountDisabled is set true 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--is-in-group-left"
  data-test="ec-currency-input__amount ec-amount-input ec-input-field__input"
  disabled="disabled"
  id="ec-input-field-85"
  type="text"
/>
`;

exports[`EcCurrencyInput :props should render the error when the errorMessage is given 1`] = `
<div
  class="ec-currency-input__error-text"
  data-test="ec-currency-input__error-text"
  id="ec-currency-input-field-31"
>
  Random message
</div>
`;

exports[`EcCurrencyInput :props should render the label when the label is given 1`] = `
<span
  class="ec-currency-input__label-text"
  data-test="ec-currency-input__label-text"
>
  Currency Input
</span>
`;

exports[`EcCurrencyInput :props should render the note when the note is given 1`] = `
<span
  class="ec-currency-input__note"
  data-test="ec-currency-input__note"
>
  Random note
</span>
`;

exports[`EcCurrencyInput :props should render without any currencies if the currencies prop is empty 1`] = `
<div
  class="ec-dropdown-search ec-dropdown ec-currency-input__currencies"
  data-test="ec-dropdown"
>
  <ecpopover-stub
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search"
    offset="8"
    placement="bottom-end"
    popoverinnerclass="ec-dropdown-search__popover"
    popperoptions="[object Object]"
  >
    <div
      class="ec-input-field"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
        data-test="ec-currency-input__currencies ec-dropdown__input ec-input-field__input"
        id="ec-currency-input-field-41"
        placeholder=""
        readonly="readonly"
        type="text"
      />
       
      <div
        class="ec-input-field__icon-wrapper"
      >
        <svg
          class="ec-input-field__icon ec-icon"
          data-test="ec-input-field__icon"
          height="24"
          width="24"
        >
          <use
            xlink:href="#ec-simple-arrow-drop-down"
          />
        </svg>
      </div>
       
      <!---->
    </div>
     
    <div>
      <ul
        class="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-dropdown-search__search-icon ec-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
           
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
         
        <!---->
         
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
      </ul>
    </div>
  </ecpopover-stub>
</div>
`;

exports[`EcCurrencyInput should render properly 1`] = `
<div
  class="ec-currency-input"
>
  <!---->
   
  <div
    class="ec-currency-input__input-group"
  >
    <div
      class="ec-dropdown-search ec-dropdown ec-currency-input__currencies"
      data-test="ec-dropdown"
    >
      <ecpopover-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search"
        offset="8"
        placement="bottom-end"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!---->
           
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
            data-test="ec-currency-input__currencies ec-dropdown__input ec-input-field__input"
            id="ec-currency-input-field-1"
            placeholder=""
            readonly="readonly"
            type="text"
          />
           
          <div
            class="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-input-field__icon ec-icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                xlink:href="#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
           
          <!---->
        </div>
         
        <div>
          <ul
            class="ec-dropdown-search__item-list"
          >
            <li
              class="ec-dropdown-search__search-area"
            >
              <svg
                class="ec-dropdown-search__search-icon ec-icon"
              >
                <use
                  xlink:href="#ec-simple-search"
                />
              </svg>
               
              <input
                autocomplete="off"
                class="ec-dropdown-search__search-input"
                data-test="ec-dropdown-search__search-input"
                placeholder="Search..."
              />
            </li>
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0"
              title="GBP"
            >
              GBP
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1"
              title="EUR"
            >
              EUR
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2"
              title="USD"
            >
              USD
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--3"
              title="JPY"
            >
              JPY
            </li>
          </ul>
        </div>
      </ecpopover-stub>
    </div>
     
    <div
      class="ec-input-field ec-currency-input__amount"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left"
        data-test="ec-currency-input__amount ec-amount-input ec-input-field__input"
        id="ec-input-field-9"
        type="text"
      />
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;
